Exercises started - Train

--- a/include/contact.html
+++ b/include/contact.html
@@ -22,6 +22,7 @@
           <li><a href="./skills.html">Skills</a></li>
           <li class="current"><a href="./contact.html">Contact</a></li>
           <li><a href="../jsplayground.html">JavaScript</a></li>
+          <li><a href="../javaExercises.html">Exercises</a></li>
         </ul>
       </div>
       <div id="site_content">
