--- a/include/jsplayground.html
+++ b/include/jsplayground.html
@@ -21,6 +21,7 @@
                     <li><a href="./include/skills.html">Skills</a></li>
                     <li><a href="./include/contact.html">Contact</a></li>
                     <li class="current"><a href="./jsplayground.html">JavaScript</a></li>
+                    <li><a href="../javaExercises.html">Exercises</a></li>
                 </ul>
             </div>
         </div>
