--- a/include/skills.html
+++ b/include/skills.html
@@ -22,6 +22,7 @@
           <li class="current"><a href="./skills.html">Skills</a></li>
           <li><a href="./contact.html">Contact</a></li>
           <li><a href="../jsplayground.html">JavaScript</a></li>
+          <li><a href="../javaExercises.html">Exercises</a></li>
         </ul>
       </div>
     </div>
