--- a/include/jsplayground.1.html
+++ b/include/jsplayground.1.html
@@ -21,6 +21,7 @@
                     <li><a href="./include/skills.html">Skills</a></li>
                     <li><a href="./include/contact.html">Contact</a></li>
                     <li class="current"><a href="./jsplayground.html">JavaScript</a></li>
+                    <li><a href="../javaExercises.html">Exercises</a></li>
                 </ul>
             </div>
         </div>
@@ -76,7 +77,6 @@
                     <button type="button" onclick = assign('minus')> MINUS </button>
                     <button type="button" onclick = assign('mult')> MULTIPLY </button>
                     <button type="button" onclick = assign('div')> DIVIDE </button>
-                    
                     <input id="output2" type="text" placeholder="Output" />
 
                     <!-- <button type="button" onclick="document.getElementById('output2').value = mult('value1','value2')">Calculate multiplication to box</button>
