Cinema variable column and row count (No longer external JSON)

--- a/include/trainers.html
+++ b/include/trainers.html
@@ -11,8 +11,14 @@
 <div id="a" style="visibility:visible">
     <h3>This is A</h3> -->
     <h2>Cinema Seating</h2>
-  <h3>Amount of seats:</h3>
-  <input id="seatCount" placeholder="Number of seats"/>
+    <h3>Rows:</h3>
+  <input id="rowCount" placeholder="Rowcount"/>
+  <h3>Columns:</h3>
+  <input id="colCount" placeholder="Column count"/>
+  <h3>Amount of seats created:</h3>
+  <span id="totalSeats"></span>
+  <h3>Amount of tickets purchased:</h3>
+  <input id="ticketCount" placeholder="Number of seats"/>
   <h3>Screen seats:</h3>
 
   <button id="viewscreen" onclick="openScreen()">Click to book seating</button>
@@ -32,7 +38,7 @@
 
 </div>
 </div> -->
-  <script src="../js/data.js"></script>
+  <script src="../js/screenSeats1.js"></script>
   <script src="../js/main.js"></script>
 </body>
 
